--- a/public/templates/review-tab.html
+++ b/public/templates/review-tab.html
@@ -8,8 +8,6 @@
     </blockquote>
 </div>
 <div class="col-sm-4">
-    <h4>test3</h4>
-    <br>
     <form name="reviewForm" ng-submit="reviewForm.$valid && reviewCtrl.addReview(store.reviews)" novalidate>
         <h4>Submit a Review</h4>
         <fieldset class="form-group">
@@ -25,7 +23,7 @@
         </fieldset>
         <fieldset class="form-group">
             <div>reviewForm is {{reviewForm.$valid}}</div>
-            <input type="submit" value="Submit" />
+            <input class="btn btn-primary" type="submit" value="Submit" />
         </fieldset>
     </form>
     <label>Live Preview: </label>
